[UPDATE] Massive rework, now support Vagrant 1.6
- Also uses retryable events where possible
- Cleaned up the modules and added better abstractions
- Added clearer error messages
- Better tie in with Vagrant events

--- a/templates/nfs_guest/guest_export_linux.erb
+++ b/templates/nfs_guest/guest_export_linux.erb
@@ -1,6 +1,6 @@
 # VAGRANT-BEGIN: <%= user %> <%= uuid %>
 <% ips.each do |ip| %>
-<% folders.each do |name, opts| %>
+<% folders.each do |dirs, opts| %>
 "<%= opts[:guestpath] %>" <%= ip %>(<%= opts[:linux__nfs_options].join(",") %>)
 <% end %>
 <% end %>
