--- a/templates/nfs_guest/guest_export_linux.erb
+++ b/templates/nfs_guest/guest_export_linux.erb
@@ -1,7 +1,7 @@
-# VAGRANT-BEGIN: <%= user %> <%= uuid %>
+# VAGRANT-NFS_GUEST-BEGIN
 <% ips.each do |ip| %>
 <% folders.each do |dirs, opts| %>
 "<%= opts[:guestpath] %>" <%= ip %>(<%= opts[:linux__nfs_options].join(",") %>)
 <% end %>
 <% end %>
-# VAGRANT-END: <%= user %> <%= uuid %>
+# VAGRANT-NFS_GUEST-END
